--- a/package.json
+++ b/package.json
@@ -40,21 +40,24 @@
   },
   "homepage": "https://github.com/vue-interface/light-switch-field/docs#readme",
   "dependencies": {
-    "@vue-interface/form-control": "^0.12.5",
-    "vue": "^2.6.14"
+    "@vue-interface/form-control": "^1.0.0-beta.1"
+  },
+  "peerDependencies": {
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-babel": "^6.0.0",
+    "@vitejs/plugin-vue": "^3.1.2",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "babel-preset-vue": "^2.0.2",
     "change-case": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.25.0",
+    "eslint-plugin-vue": "^9.6.0",
     "pascalcase": "^2.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
-    "vite": "^2.7.2",
-    "vite-plugin-vue2": "^1.9.3"
+    "vite": "^3.1.7",
+    "vue": "^3.2.40"
   }
 }
