--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-interface/light-switch-field",
-  "version": "1.0.8",
+  "version": "2.0.0-beta.0",
   "description": "A Vue light switch field component.",
   "files": [
     "index.js",
