Updated for monorepo, vite4, and refactored

--- a/package.json
+++ b/package.json
@@ -3,22 +3,26 @@
   "version": "2.0.0-beta.0",
   "description": "A Vue light switch field component.",
   "files": [
-    "index.js",
     "dist",
-    "src"
+    "tailwindcss"
   ],
-  "main": "./dist/light-switch-field.umd.js",
-  "module": "./index.js",
+  "type": "module",
+  "main": "./dist/light-switch-field.umd.cjs",
+  "module": "./dist/light-switch-field.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/light-switch-field.js",
+      "require": "./dist/light-switch-field.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "pre-release": "npm run build; git add . -A; git commit -m 'pre-release commit'",
-    "release-patch": "npm run pre-release && npm version patch -m \"%s\" && npm run release;",
-    "release-minor": "npm run pre-release && npm version minor -m \"%s\" && npm run release;",
-    "release-major": "npm run pre-release && npm version major -m \"%s\" && npm run release;",
-    "release": "git add . -A; git commit; git push --tags origin; npm publish;"
+    "lint": "eslint",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
@@ -46,18 +50,19 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^6.0.0",
-    "@vitejs/plugin-vue": "^3.1.2",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/compiler-sfc": "^3.2.45",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.2",
-    "babel-eslint": "^10.1.0",
-    "babel-preset-vue": "^2.0.2",
     "change-case": "^4.1.2",
-    "eslint": "^8.25.0",
-    "eslint-plugin-vue": "^9.6.0",
+    "eslint": "^8.27.0",
+    "eslint-plugin-vue": "^9.7.0",
     "pascalcase": "^2.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
-    "vite": "^3.1.7",
-    "vue": "^3.2.40"
+    "typescript": "^4.0.0",
+    "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
+    "vue": "^3.2.37"
   }
 }
