--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-interface/eslint-config": "^1.0.0-beta.0",
     "@vue/compiler-sfc": "^3.2.47",
-    "@vue-interface/eslint-config": "1.0.0-beta.1",
     "autoprefixer": "^10.4.13",
     "change-case": "^4.1.2",
     "eslint": "^8.34.0",
