--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vue-tsc",
     "lint": "eslint",
     "preview": "vite preview"
   },
@@ -44,23 +44,31 @@
   },
   "homepage": "https://github.com/vue-interface/light-switch-field",
   "dependencies": {
-    "@vue-interface/form-control": "^1.0.0-beta.16"
+    "@vue-interface/form-control": "^1.0.0-beta.30"
   },
   "peerDependencies": {
     "vue": "^3.3.4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.2.0",
-    "@vue-interface/eslint-config": "^1.0.0-beta.0",
-    "autoprefixer": "^10.4.13",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/npm": "^10.0.5",
+    "@vitejs/plugin-vue": "^4.3.3",
+    "@vue-interface/eslint-config": "1.0.0-beta.4",
+    "autoprefixer": "^10.4.15",
     "change-case": "^4.1.2",
-    "eslint": "^8.34.0",
+    "commitlint": "^17.7.1",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.47.0",
+    "husky": "^8.0.3",
     "pascalcase": "^2.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.9.5",
-    "vite": "^4.2.0",
-    "vite-plugin-dts": "^1.7.3",
-    "vue": "^3.3.4"
+    "postcss": "^8.4.28",
+    "semantic-release": "^21.1.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2",
+    "vite": "^4.4.9",
+    "vue": "^3.3.4",
+    "vue-tsc": "^1.8.8"
   }
 }
