--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,23 @@
 {
-    "compilerOptions": {
-      "target": "ESNext",
-      "module": "Node16",
-      "moduleResolution": "Node16",
-      "importHelpers": true,
-      "jsx": "preserve",
-      "esModuleInterop": true,
-      "resolveJsonModule": true,
-      "sourceMap": true,
-      "baseUrl": "./",
-      "strict": false,
-      "paths": {},
-      "allowJs": true,
-      "allowSyntheticDefaultImports": true,
-      "skipLibCheck": true,
-      "declaration": true,
-      "emitDeclarationOnly": true,
-      "sourceRoot": "./src",
-      "outDir": "./dist"
-    },
-    "include": ["index.ts", "src"]
-  }
-  
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "importHelpers": true,
+    "jsx": "preserve",
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "sourceMap": true,
+    "baseUrl": "./",
+    "strict": false,
+    "paths": {},
+    "allowJs": true,
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "sourceRoot": "./src",
+    "outDir": "./dist"
+  },
+  "include": ["index.ts", "src"]
+}
